# CSC4005-As2-Mandelbrot-Set

./: CMakeLists.txt  build.sh  sbatch_mpi.sh  sbatch_thread.sh
src/: main.cpp  thread.cpp
